syntax = "proto3";

package auth;

option go_package = "contract/gen/auth;sso";

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
  rpc RefreshTokens (RefreshTokensRequest) returns (RefreshTokensResponse);
}

// Регистрация
message RegisterRequest {
  string login = 1; 
  string password = 2;
}

message RegisterResponse {
  string user_id = 1;
}

// Аутентификация (вход)
message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

// Верификация токена
message VerifyTokenRequest {
  string access_token = 1;
}

message VerifyTokenResponse {
  string user_id = 1;
  bool is_valid = 2;
}

message RefreshTokensRequest {
  string refresh_token = 1; 
}

message RefreshTokensResponse {
  string new_access_token = 1;
  string new_refresh_token = 2; 
}